# controllers-demo-rust

./: Cargo.toml  Dockerfile  README.md  justfile
src/: api.rs  crdgen.rs  main.rs
yaml/: crd.yaml  plan.yaml
