[package]
name = "controllers-demo-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.96.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
serde_yaml = "0.9.34"
serde = { version = "1.0.210", features = ["derive"] }
schemars = "0.8.21"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
thiserror = "1.0.64"
futures-util = "0.3.31"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"
